--- a/src/Components/props/list.css
+++ b/src/Components/props/list.css
@@ -7,7 +7,7 @@
     gap: 10px;
   }
   
-  form input[type="text"] {
+  form input {
     width: 60%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -30,7 +30,7 @@
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   
   form button:hover {
